# CliniQuery

./: .gitignore  CliniQuery_Data.ipynb  README.md  package-lock.json
cpp_backend/: CMakeLists.txt
cpp_backend/data_gen/: CliniQuery_Data.ipynb  README.md
cpp_backend/src/: bplus.cpp  bplus.h  main.cpp  trieName.cpp  trieName.h  trieSymp.cpp  trieSymp.h
data_gen/: README.md
frontend/src/: App.css  App.js  DataPrompting.js  Header.js  server.js
frontend/src/Components/: DataPrompting.js  FetchResults.css  FetchResults.js  FetchResultsTrie.js  FetchTime.js  InputBar.js
frontend/src/Pages/: HomePage.js
